<package>
  <name>saw_psmove</name>
  <version>1.1.0</version>
  <description>
  sawPSMove: cisst/SAW device for the PlayStation Move controller
  </description>
  <maintainer email="akumar81@jhu.edu">Aravind S Kumar</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawPSMove</url>

  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
