<package>
  <name>saw_psmove_examples</name>
  <version>1.1.0</version>
  <description>
  sawPSMove Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawPSMove</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_psmove</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_psmove</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
