<?xml version="1.0"?>
<package format="3">
  <name>psmove_ros</name>
  <version>1.1.0</version>
  <description>ROS 2 wrapper for sawPSMove</description>
  <maintainer email="akumar81@jhu.edu">Aravind S Kumar</maintainer>
  <license>cisst</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cisst_ros2_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
