<?xml version="1.0"?>
<package format="2">
  <name>sawPSMove</name>
  <version>0.1.0</version>
  <description>cisst/SAW component for PlayStation Move controller</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD-3-Clause</license>
  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
  <author email="you@example.com">You</author>
</package>
